# CSI

./: .editorconfig  CMakeLists.txt  Licenses.md  Main.qml  README.md  SECURITY.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
OTHER/: README.en.txt  README.txt
OTHER/bak/v1/: Main.qml.bak1  Main.qml.bak2  Main.qml.bak3  Main.qml.bak4  Main.qml.bak5
OTHER/bak/v2/: Main.qml.bak10  Main.qml.bak11  Main.qml.bak6  Main.qml.bak7  Main.qml.bak8  Main.qml.bak9  ShadowFrame.qml.bak1  ShadowFrame.qml.bak2  Theme.qml.bak1  Theme.qml.bak2
OTHER/bak/v3/: Main.qml.bak12  Main.qml.bak13  Main.qml.bak14  Main.qml.bak15
OTHER/image/GIMP/: noise-tiling.xcf  shadow.py
assets/: README.txt
data/: README.txt
includes/: backend.h  settings.h
res/qml/element/: NiceDialog.qml  ShadowFrame.qml  Theme.qml  ThemeBorderButton.qml  ThemeText.qml  Tooltip.qml
res/qml/pages/: SettingsPage.qml  StartPage.qml
res/rc/: README.txt  app.rc
src/: backend.cpp  settings.cpp
